# LAGEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_game_engine.sh  run_game_engine.sh
Backup/: CMakeLists.txt
Backup/include/: Cloth.hpp  Cloth3D.hpp  Object3D.hpp  Shader.hpp  VerletSystem.hpp  number_generator.hpp
Backup/src_2D/: Cloth.cpp  MeshGenerator.cpp  VerletSystem.cpp
Backup/src_3D/: Ball3D.cpp  Camera3D.cpp
Documents/: Project Proposal.docx
cloth-simulation/Editor/: CMakeLists.txt  flag  main.cpp  main2.cpp
cloth-simulation/Editor/build2/: godot_editor  imgui.ini
cloth-simulation/PartyKel/include/PartyKel/: Octree.hpp  WindowManager.hpp
cloth-simulation/PartyKel/include/PartyKel/renderer/: FlagRenderer3D.hpp  Sphere.hpp
cloth-simulation/PartyKel/src/renderer/: Sphere.cpp
cloth-simulation/build2/: flag
cloth-simulation/src/: control.txt  flag.cpp
engine/core/: Logger.cpp  Logger.hpp  MathUtils.hpp  RandomUtils.hpp  Time.hpp
engine/graphics/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Mesh3D.cpp  Mesh3D.hpp  MeshGenerator.cpp  MeshGenerator.hpp  MeshGenerator3D.cpp  MeshGenerator3D.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp
engine/objects/: Ball2D.cpp  Ball2D.hpp  Ball3D.cpp  Ball3D.hpp  Cannon2D.cpp  Cannon2D.hpp  Cloth2D.cpp  Cloth2D.hpp  Cloth3D.cpp  Cloth3D.hpp
engine/physics/: BoxShape.cpp  BoxShape.hpp  ClothSolver.cpp  ClothSolver.hpp  ClothSolver3D.cpp  ClothSolver3D.hpp  CollisonShape.cpp  CollisonShape.hpp  Constraint2D.cpp  Constraint2D.hpp  Constraint3D.cpp  Constraint3D.hpp  Particle.cpp  Particle.hpp  Particle3D.cpp  Particle3D.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  PhysicsWorld3D.cpp  PhysicsWorld3D.hpp  RigidBody.cpp  RigidBody.hpp  SoftBodySystem.cpp  SoftBodySystem.hpp  SoftBodySystem3D.hpp  SoftBodySystem3d.cpp  SphereShape.cpp  Spring3D.cpp  Spring3D.hpp  VertletSolver.hpp  VertletSystem.cpp  VertletSystem.hpp  VertletSystem3D.cpp  VertletSystem3D.hpp
engine/physics/character/: CharacterController.cpp  CharacterController.hpp
engine/physics/collision/: BroadPhase.cpp  BroadPhase.hpp  CollisonDetector.cpp  ContactManifold.cpp  ContactManifold.hpp  SpatialHashBroadPhase.cpp  SpatialHashBroadPhase.hpp
engine/physics/constraints/: Constraint.cpp  Constraint.hpp  ConstraintSolver.cpp  ConstraintSolver.hpp  DistanceJoint.cpp  DistanceJoint.hpp  HingeJoint.cpp  HingeJoint.hpp  Joint.cpp  Joint.hpp
engine/physics/shapes/: CapsuleShape.cpp  CapsuleShape.hpp
engine/scene/: Object2D.hpp  Object3D.hpp  Scene.cpp  Scene.hpp  Scene2D.cpp  Scene2D.hpp  Scene3D.cpp  Scene3D.hpp  SceneManager.cpp  SceneManager.hpp  SceneManager2D.cpp  SceneManager2D.hpp  SceneManager3D.cpp  SceneManager3D.hpp  SceneManger3D.cpp
include/: Ball.hpp  Ball3D.hpp  Camera3D.hpp  Cloth.hpp  Cloth3D.hpp  MeshGenrator.hpp  Particle.hpp  Particle3D.hpp  Shader.hpp  VerletSystem.hpp  math.hpp  number_generator.hpp
shaders/: ball.frag  ball.vert  cloth.frag  cloth.vert  fragment_shader.glsl  vertex_shader.glsl
src/: Ball.cpp  Cloth.cpp  EditorEntry.cpp  Particle.cpp  VerletSystem.cpp  main.cpp  main2D.cpp  main3D.cpp  testRigidBodies.cpp
src_2D/: Particle.cpp  main.cpp
src_3D/: Ball3D.cpp  Camera3D.cpp  Cloth3D.cpp  Particle3D.cpp  Shader.cpp  main3d.cpp
